# lotr_api_sdk

./: README.md  api_client_test_fp.py  design.md  pyproject.toml  requirements.txt
api/: lotr_api_fp.py
docs/: api_client_test_fp.html  index.html  lotr_api_fp.html  search.js
tests/: api_testsuite.py  test_case_movie_api.py  test_case_quote_api.py
